--- a/ROAR_gym/configurations/wandb_configuration.json
+++ b/ROAR_gym/configurations/wandb_configuration.json
@@ -1,1 +1,1 @@
-{"run_id": "Run 5", "name": "", "project_name": "Full_Control", "entity": "roar"}
+{"run_id": "Run 1", "name": "", "project_name": "Major_Map", "entity": "roar"}
